Add method to get and recommend ram amount

--- a/PaperServerLauncher/PaperServerLauncher.csproj
+++ b/PaperServerLauncher/PaperServerLauncher.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utils.cs" />
     <Compile Include="PaperServerLauncher.cs">
       <SubType>Form</SubType>
     </Compile>
