--- a/PaperServerLauncher/PaperServerLauncher.csproj
+++ b/PaperServerLauncher/PaperServerLauncher.csproj
@@ -48,12 +48,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AikarFlags.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AikarFlags.Designer.cs">
-      <DependentUpon>AikarFlags.cs</DependentUpon>
-    </Compile>
     <Compile Include="Utils.cs" />
     <Compile Include="PaperServerLauncher.cs">
       <SubType>Form</SubType>
@@ -63,9 +57,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AikarFlags.resx">
-      <DependentUpon>AikarFlags.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="PaperServerLauncher.resx">
       <DependentUpon>PaperServerLauncher.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +69,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Utils.AikarFlag.datasource" />
+    <None Include="Properties\DataSources\Utils.AikarFlagData.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
