--- a/PaperServerLauncher/PaperServerLauncher.csproj
+++ b/PaperServerLauncher/PaperServerLauncher.csproj
@@ -35,6 +35,9 @@
   <PropertyGroup>
     <ApplicationIcon>paper-logo.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>PaperServerLauncher.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
